"Fixed" the color contrast

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ nav {
 .page-nav > li {
   font-size: 1.5rem;
   width: 100%;
-  background-color: #2caaff;
+  background-color: #243f8f;
 }
 
 .bb {
@@ -141,7 +141,7 @@ footer h2 {
 }
 
 footer {
-  background-color: #2caaff;
+  background-color: #243f8f;
   padding-bottom: 1rem;
   padding-top: 1em;
 }
